--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-allergens",
-  "version": "0.2.1",
+  "name": "react-allergens-css",
+  "version": "0.3.0",
   "main": "build/index.js",
   "scripts": {
     "start": "node scripts/start.js",
